@@ -28,22 +28,16 @@ GeoServer is compatible with Java 17, but requires extra care for running in som
 
 Deployment on Tomcat 9.0.55 has been tested with success.
 
-The "bin" packaging can work too, but requires turning off the Marlin rasterizer integration.
-This can be done by modifying the scripts, or by simply removing the Marlin jars::
+GeoServer code depends on a variety of libraries trying to access the JDK internals. 
+It does not seem to matter when running as a web application. However, in case of need, 
+here is the full list of opens used by the build process::
 
-   rm webapps/geoserver/WEB-INF/lib/marlin-0.9.3.jar
-
-
-GeoServer code depends on a variety of libraries trying to access the JDK internals. As reported above,
-it does not seem to matter when running as a web application. However, in case of need, here is
-the full list of opens used by the build process::
-
-   --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+   --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.desktop/sun.java2d.pipe=ALL-UNNAMED
 
 Running on Java 11
 ------------------
 
-GeoServer 2.15 will run under Java 11 with no additional configuration on **Tomcat 9** or newer and **Jetty 9.4.12** or newer.
+GeoServer 2.15 and above will run under Java 11 with no additional configuration on **Tomcat 9** or newer and **Jetty 9.4.12** or newer.
 
 Running GeoServer under Java 11 on other Application Servers may require some additional configuration. Some Application Servers do not support Java 11 yet.
 
